--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
-plugins ***REMOVED***
+plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-***REMOVED***
+}
 
-android ***REMOVED***
+android {
     namespace 'com.example.h4_dbfirebase'
     compileSdk 33
 
-    defaultConfig ***REMOVED***
+    defaultConfig {
         applicationId "com.example.h4_dbfirebase"
         minSdk 24
         targetSdk 33
@@ -16,24 +16,24 @@ android ***REMOVED***
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-***REMOVED***
+    }
 
-    buildTypes ***REMOVED***
-        release ***REMOVED***
+    buildTypes {
+        release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-***REMOVED***
-***REMOVED***
-    compileOptions ***REMOVED***
+        }
+    }
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-***REMOVED***
-    kotlinOptions ***REMOVED***
+    }
+    kotlinOptions {
         jvmTarget = '1.8'
-***REMOVED***
-***REMOVED***
+    }
+}
 
-dependencies ***REMOVED***
+dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -46,4 +46,4 @@ dependencies ***REMOVED***
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-***REMOVED***
+}
