--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,16 @@
-pluginManagement ***REMOVED***
-    repositories ***REMOVED***
+pluginManagement {
+    repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
-***REMOVED***
-***REMOVED***
-dependencyResolutionManagement ***REMOVED***
+    }
+}
+dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories ***REMOVED***
+    repositories {
         google()
         mavenCentral()
-***REMOVED***
-***REMOVED***
+    }
+}
 rootProject.name = "H4-DB Fire Base"
 include ':app'
